maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:46: error: missing argument list for method isDirectionFree in class PledgeMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `isDirectionFree _` or `isDirectionFree(_)` instead of `isDirectionFree`.
      case 1 => while (!isDirectionFree) {
                        ^